--- a/unit-4/src/sprint-2/day-3/assignments/Employee.module.css
+++ b/unit-4/src/sprint-2/day-3/assignments/Employee.module.css
@@ -1,13 +1,29 @@
 .myForm{
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     /* border: solid red 1px; */
     margin: 10px auto;
     font-size: 18px;
     justify-content: space-between;
 }
+#main_div{
+    border: solid black 1px;
+    display: flex;
+    justify-content: space-around;
+}
+table{
+    border-collapse:collapse ;
+    width: 100%;
+}
+td,th{
+    border: 1px solid black;
+    text-align: left;
+    padding: 8px;
+    font-size: 20px;
+}
 input,select{
     width: 59%;
+
 }
 .mainDiv{
     border: solid red 1px;
@@ -22,4 +38,11 @@ input,select{
     border: none;
     border-radius: 10px;
     padding: 10px 0px;
+}
+.heading{
+    text-align: center;
+}
+#rightDiv{
+    /* border: solid red 1px; */
+    width: 70%;
 }
