--- a/unit-4/src/sprint-2/day-3/assignments/Employee.module.css
+++ b/unit-4/src/sprint-2/day-3/assignments/Employee.module.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
 }
 #main_div{
-    border: solid black 1px;
+    /* border: solid black 1px; */
     display: flex;
     justify-content: space-around;
 }
@@ -26,7 +26,7 @@ input,select{
 
 }
 .mainDiv{
-    border: solid red 1px;
+    /* border: solid red 1px; */
     width: 25%;
     font-size: 18px;
 }
