--- a/unit-4/src/sprint-2/day-2/assignments/Timer1/Timer.module.css
+++ b/unit-4/src/sprint-2/day-2/assignments/Timer1/Timer.module.css
@@ -19,6 +19,7 @@ button{
     font-size: 20px;
     font-weight: bold;
     background-color: aquamarine;
+    color: black;
     margin: 16px;
     border-radius: 20px;
 }
