--- a/unit-4/src/sprint-2/day-2/assignments/timer_stopwatch/Timer.module.css
+++ b/unit-4/src/sprint-2/day-2/assignments/timer_stopwatch/Timer.module.css
@@ -2,6 +2,7 @@
     font-size: 50px;
     font-family: digital-clock-font;
     font-weight: bold;
+    text-align: center;
 
     border: solid 1px black;
     width: 300px;
@@ -14,4 +15,9 @@ button{
     font-size: 20px;
     background-color: black;
     color: white;
+}
+.buttonDiv{
+    margin: auto;
+    /* border: solid red 1px; */
+    width: fit-content;
 }
