--- a/unit-4/src/App.css
+++ b/unit-4/src/App.css
@@ -1,6 +1,10 @@
 .App {
-  text-align: center;
-  border: solid red 1px;
+  /* text-align: center; */
+  /* border: solid red 1px; */
+  display: flex;
+  height: 400px;
+  margin: auto 15%;
+  justify-content: space-between;
 }
 
 .border{
